<resources>
    <string name="app_name">My Fitness App</string>
    <string name="title_goals">Goals</string>
    <string name="title_planner">Planner</string>
    <string name="title_guides">Guides</string>
    <string name="title_profile">Profile</string>

    //goals
    //ask
    <string name="ask_current_weight">Initial Weight</string>
    <string name="ask_current_bf">Initial Body Fat %</string>
    <string name="ask_target_type">Goal Type</string>
    <string name="ask_switch_bf">Goal Body Fat %</string>
    <string name="ask_weight">Goal Weight</string>
    <string name="ask_start_date">Start Date</string>
    <string name="ask_target_Date">Target Date</string>
    <string name="unit_type_lbs">lbs</string>
    <string name="unit_type_kg">kg</string>
    <string name="unit_type_percentage">%</string>
    <string name="ask_popup_goal_weight">Enter Goal Weight:</string>
    <string name="ask_popup_goal_bf">Enter Goal Body Fat %:</string>
    <string name="ask_maintenance_cals">Enter Maintenance Calories:</string>

    //Results
    <string name="tell_results">Results</string>
    <string name="tell_maintenance_calories">Maintenance Calories</string>
    <string name="tell_deficit_required">Target Calorie Deficit</string>
    <string name="tell_target_daily_calories">Target Daily Calories</string>
    <string name="tell_target_macros">Proposed Macros</string>
    <string name="title_details">Details</string>



    //popup
    <string name="goals_popup_enter_weight">Enter Weight:</string>

</resources>